# lsst-rsp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml  periodic-ci.yaml
changelog.d/: 20240322_084545_rra_DM_43449.md  20240505_121808_athornton.md  20240613_081431_athornton_DM_44731.md  20240613_114352_athornton_DM_44731.md  20240617_092012_athornton_fix_missing_logconfig.md  20240726_135819_athornton_DM_45405.md  20240814_154234_athornton_DM_45035.md  20240816_134946_athornton.md  20250117_120000_athornton_DM_48465.md  20250123_171813_steliosvoutsinas_DM_48554.md  20250225_154705_athornton_DM_49174.md  20250313_194107_steliosvoutsinas_DM_47556.md  20250318_152606_athornton_DM_49490.md  20250325_161807_athornton_DM_49490.md  20250326_125422_athornton_081.md  20250327_020729_steliosvoutsinas_DM_49741.md  20250402_191136_steliosvoutsinas_DM_49626.md  20250424_143836_athornton_DM_50484.md  20250516_142542_athornton_DM_50924.md  20250530_113646_athornton_DM_49959.md  20250531_161409_athornton_DM_49959.md  20250611_153630_athornton_DM_51350.md  20250701_131708_athornton_DM_51608.md  20250812_115601_athornton_DM_52022.md  20250821_103352_athornton_DM_52265.md  20251003_091019_rra_DM_52657.md  20251003_125731_rra_DM_52657.md  20251126_163527_athornton_DM_53305.md  20251218_112857_athornton_DM_53638.md  20251229_194839_athornton_DM_53427.md  20260211_133518_rra_DM_53975.md  20260323_161425_rra_DM_54440.md  20260324_182342_steliosvoutsinas_DM_54469.md  20260327_094936_rra_DM_54440.md  20260330_163153_rra_DM_54440.md  20260506_233246_steliosvoutsinas_DM_54883.md  20260519_212923_steliosvoutsinas_DM_54998.md  20260604_162449_rra_DM_55158.md  20260605_111810_rra_DM_55165.md  20260608_171642_rra_DM_55165.md  (+3 more)
docs/: api.rst  changelog.md  documenteer.toml  index.rst
docs/dev/: development.rst  index.rst  release.rst
docs/user-guide/: index.rst
requirements/: dev.in  dev.txt  main.in  main.txt
scripts/: install-base-packages.sh  install-dependency-packages.sh  update-uv-version.sh
src/jupyterlabutils/: __init__.py
src/jupyterlabutils/notebook/: __init__.py
src/lsst/: __init__.py
src/lsst/rsp/: __init__.py  _discovery.py  _exceptions.py  _history.py  _services.py  _version.py  catalog.py  client.py  forwarder.py  log.py  logging.py  service.py  utils.py
src/lsst/rsp/startup/: __init__.py  _launch.py  cli.py  constants.py  exceptions.py  util.py
src/lsst/rsp/startup/_deprecated/: cli.py  constants.py  exceptions.py
src/lsst/rsp/startup/_deprecated/models/: noninteractive.py
src/lsst/rsp/startup/_deprecated/services/labrunner/: labrunner.py
src/lsst/rsp/startup/_deprecated/services/landing_page/: exceptions.py  input.py  main.py  provisioner.py
src/lsst/rsp/startup/models/: noninteractive.py
src/lsst/rsp/startup/services/: __init__.py  _rspstartup.py  initcontainer.py  labrunner.py
src/lsst/rsp/startup/services/labrunner/: __init__.py  labrunner.py
src/lsst/rsp/startup/services/landing_page/: input.py  main.py  provisioner.py
src/lsst/rsp/startup/storage/: command.py  logging.py  process.py
src/rubin_jupyter_utils/lab/: __init__.py
src/rubin_jupyter_utils/lab/notebook/: __init__.py
src/rubin_jupyter_utils/lab/notebook/utils/: __init__.py
tests/: catalog_test.py  client_test.py  conftest.py  deprecated_provisioner_test.py  deprecated_startup_test.py  discovery_test.py  exception_test.py  history_test.py  internal_test.py  provisioner_test.py  services_test.py  startup_test.py  utils_test.py  version_test.py
tests/data/discovery/: full.json  idfdev_efd-invalid.json  idfdev_efd.json  syntax.json  v1-invalid.json  v1.json
tests/data/files/: README.md
tests/data/files/etc/nublado/environment/: EXTERNAL_INSTANCE_URL
tests/data/files/etc/skel/: .gitconfig  .pythonrc
tests/data/files/homedir/.lsst/: aws-credentials.ini
tests/data/files/jupyterlab/etc/: 20-logging.py
tests/data/responses/: resp-ssotap-2.xml  resp-ssotap-5.xml  resp-ssotap.xml  resp-tap-0.xml  resp-tap-5.xml  resp-tap.xml  sia-capabilities.xml  tap-capabilities.xml
tests/startup/: initcontainer_test.py  labrunner_test.py
tests/support/: data.py
tests/support/files/: README.md
tests/support/files/etc/nublado/secrets/: postgres-credentials.txt  token
tests/support/files/homedir/.lsst/: postgres-credentials.txt
tests/support/files/stack_top/jupyterlab/secrets/: aws-credentials.ini
tests/support/repo/refs/heads/: main
